--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "copy-webpack-plugin": "^6.0.1",
     "html-webpack-plugin": "^4.3.0",
     "merge-jsons-webpack-plugin": "^1.0.21",
+    "resize-detector": "^0.2.2",
     "selfsigned": "^1.10.8",
     "simplex-noise": "^2.4.0",
     "split.js": "^1.5.11",
